Upgrade to spb 4